  open_prevfile(), open_nextfile()
	- Translate the "New Buffer" string when displaying "Switched
	  to" messages on the statusbar. (DLR)
- global.c:
  shortcut_init()
	- Remove redundant NANO_SMALL #ifdef. (DLR)
	- Change an erroneous _() around the "New Buffer" string to
	  N_(). (DLR)
	- Add new key aliases: F15 for "Mark Text" (DLR) and F16 for
	  "Where Is Next" (Chris).
- nano.c:
  die_save_file()
	- Clarify the error message when there are too many backup files
	  and the current one can't be written. (DLR)
  help_init()
	- Rework to be a bit more flexible.  Only add tabs for shortcut
	  key entries if those entries exist, and if there's only one
	  entry left but there's room for more than one, add enough tabs
	  to put that entry at the end.  Also, make sure a function key
	  is displayed in the middle if it's the first entry.  These
	  changes allow e.g. the miscellaneous meta key sequence to be
	  displayed in a shortcut that has a control key, a primary meta
	  key sequence, and a miscellaneous meta key sequence, but no
	  function key. (DLR)
	- Update the help text to mention replacing and spell checking
	  only selected text, and also add a few cosmetic fixes to it.
	  (DLR)
  do_prev_word()
	- Tweak to avoid an infinite loop, since current_x is now a
	  size_t and hence is unsigned. (DLR)
  do_int_spell_fix()
	- Move the REVERSE_SEARCH flag toggling into the NANO_SMALL
	  #ifdef, since the tiny version of nano doesn't support reverse
	  searching.  Move the CASE_SENSITIVE flag toggling out in order
	  to allow the internal spell checker to work properly when
	  NANO_SMALL is defined and DISABLE_SPELLER isn't.  Also, turn
	  the USE_REGEXP flag off during spell checking in order to
	  avoid a potential segfault. (DLR)
	- Fix a problem where if the cursor is in the middle of a file,
	  the spell checker will sometimes only correct the misspelled
	  word instances that appear before the cursor position and then
	  stop. (Rocco)